--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -20,7 +20,7 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
-            app:contentScrim="@color/colorPrimary"
+            app:contentScrim="@color/md_amber_900"
             app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
@@ -46,6 +46,11 @@
                         app:layout_collapseMode="parallax"
                         tools:src="@tools:sample/backgrounds/scenic" />
 
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/start_color_gradient" />
+
                     <!-- Play button image -->
                     <ImageView
                         android:id="@+id/iv_play_circle"
@@ -53,8 +58,7 @@
                         android:layout_height="@dimen/size_play_image"
                         android:layout_gravity="center_horizontal|center_vertical"
                         android:background="@drawable/play_circle"
-                        android:contentDescription="@string/play_content_description"
-                        android:visibility="invisible" />
+                        android:contentDescription="@string/play_content_description" />
 
                 </FrameLayout>
 
@@ -69,7 +73,7 @@
                     android:paddingBottom="@dimen/padding_activity_small"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textColor="@android:color/white"
-                    app:layout_constraintEnd_toStartOf="@+id/fab"
+                    app:layout_constraintEnd_toStartOf="@+id/favorite_button"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/frame"
                     tools:text="movie title" />
@@ -112,21 +116,25 @@
                         android:id="@+id/pb_detail_loading_indicator"
                         android:layout_width="@dimen/size_detail_loading_indicator"
                         android:layout_height="@dimen/size_detail_loading_indicator"
-                        android:layout_gravity="center"
-                        android:visibility="invisible" />
+                        android:layout_gravity="center"/>
 
                 </FrameLayout>
 
-                <!-- Favorite button to mark a movie as a Favorite or UnFavorite -->
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/fab"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <com.github.ivbaranov.mfb.MaterialFavoriteButton
+                    android:id="@+id/favorite_button"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_alignParentRight="true"
                     android:layout_margin="@dimen/margin_activity"
-                    app:backgroundTint="@color/color_fab"
+                    android:background="@drawable/border_raidus"
                     app:layout_constraintBottom_toBottomOf="@+id/frame"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/frame" />
+                    app:layout_constraintTop_toBottomOf="@+id/frame"
+                    app:mfb_bounce_duration="0"
+                    app:mfb_color="white"
+                    app:mfb_rotation_angle="360"
+                    app:mfb_rotation_duration="300"
+                    app:mfb_type="heart" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -137,6 +145,7 @@
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:layout_collapseMode="pin"
                 app:navigationIcon="@drawable/ic_arrow_back_black_24dp" />
+
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
         <!-- Provides a horizontal layout to display tabs -->
@@ -146,7 +155,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/blue_grey_dark"
-            app:tabMode="scrollable" />
+            app:tabGravity="fill"
+            app:tabMode="fixed"
+            app:tabIndicatorColor="@color/colorAccent"
+            app:tabSelectedTextColor="@color/colorAccent"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
