--- a/app/src/main/res/layout/cast_list_item.xml
+++ b/app/src/main/res/layout/cast_list_item.xml
@@ -1,79 +1,65 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~  Copyright 2018 Soojeong Shin
-  ~
-  ~  Licensed under the Apache License, Version 2.0 (the "License");
-  ~  you may not use this file except in compliance with the License.
-  ~  You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~  Unless required by applicable law or agreed to in writing, software
-  ~  distributed under the License is distributed on an "AS IS" BASIS,
-  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~  See the License for the specific language governing permissions and
-  ~  limitations under the License.
-  -->
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/md_black_1000">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/md_black_1000">
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_cast"
+        android:layout_width="@dimen/width_cast_image"
+        android:layout_height="@dimen/height_cast_image"
+        app:cardCornerRadius="36dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginVertical="10dp"
+        >
         <ImageView
             android:id="@+id/iv_cast"
-            android:layout_width="@dimen/width_cast_image"
-            android:layout_height="@dimen/height_cast_image"
-            android:layout_marginBottom="@dimen/margin_activity_small"
-            android:layout_marginLeft="@dimen/margin_activity"
-            android:layout_marginStart="@dimen/margin_activity"
-            android:layout_marginTop="@dimen/margin_activity_small"
-            android:contentDescription="@string/cast_content_description"
-            android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_cast_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_cast_name"
-            android:layout_marginStart="@dimen/margin_cast_name"
-            android:layout_marginTop="@dimen/margin_activity"
-            android:fontFamily="@font/source_sans_pro_semi_bold"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline"
-            app:layout_constraintStart_toEndOf="@+id/iv_cast"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="cast name" />
-
-        <TextView
-            android:id="@+id/tv_cast_character"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_activity"
-            android:layout_marginEnd="@dimen/margin_activity"
-            android:layout_marginLeft="@dimen/margin_cast_character"
-            android:layout_marginRight="@dimen/margin_activity"
-            android:layout_marginStart="@dimen/margin_cast_character"
-            android:fontFamily="@font/source_sans_pro_regular"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/iv_cast"
-            app:layout_constraintTop_toTopOf="@+id/guideline"
-            tools:text="cast character" />
-
-        <!-- Divider -->
-        <View
             android:layout_width="match_parent"
-            android:layout_height="@dimen/height_divider"
-            android:background="@color/color_divider" />
+            android:layout_height="match_parent"
+            android:contentDescription="@string/cast_content_description"
+            android:scaleType="centerCrop" />
+    </androidx.cardview.widget.CardView>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+    <!-- Divider -->
+
+    <TextView
+        android:id="@+id/tv_cast_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_cast_name"
+        android:layout_marginTop="13dp"
+        android:fontFamily="@font/source_sans_pro_semi_bold"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/cv_cast"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="cast name" />
+
+    <TextView
+        android:id="@+id/tv_cast_character"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_cast_character"
+        android:layout_marginEnd="@dimen/margin_activity"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/source_sans_pro_regular"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/cv_cast"
+        tools:text="cast character" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_divider"
+        android:background="@color/color_divider" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
