--- a/app/src/main/res/layout/review_list_item.xml
+++ b/app/src/main/res/layout/review_list_item.xml
@@ -1,57 +1,68 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~  Copyright 2018 Soojeong Shin
-  ~
-  ~  Licensed under the Apache License, Version 2.0 (the "License");
-  ~  you may not use this file except in compliance with the License.
-  ~  You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~  Unless required by applicable law or agreed to in writing, software
-  ~  distributed under the License is distributed on an "AS IS" BASIS,
-  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~  See the License for the specific language governing permissions and
-  ~  limitations under the License.
-  -->
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorPrimary">
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/frame"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:clipChildren="false"
+        app:cardCornerRadius="10dp"
+        android:background="@drawable/review_item_selector">
 
-        <androidx.cardview.widget.CardView
-            style="@style/CardViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="370dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/review_item_selector">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/image_author"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="16dp"
+                android:contentDescription="Image content"
+                app:layout_constraintEnd_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:srcCompat="@drawable/face" />
+
+            <TextView
+                android:id="@+id/text_author"
+                style="@style/OverviewLabelStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/padding_activity"
-                android:background="@drawable/review_item_selector"
-                android:orientation="vertical">
+                android:layout_marginStart="16dp"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:textColor="@color/md_white_1000"
+                app:layout_constraintStart_toEndOf="@+id/image_author"
+                app:layout_constraintTop_toTopOf="@+id/image_author"
+                tools:text="@tools:sample/full_names" />
 
-                <TextView
-                    android:id="@+id/tv_review_author"
-                    style="@style/OverviewLabelStyle"
-                    android:drawableLeft="@drawable/face"
-                    android:drawablePadding="@dimen/padding_activity_small"
-                    android:drawableStart="@drawable/face"
-                    android:text="@{review.author}"
-                    tools:text="review author" />
+            <TextView
+                android:id="@+id/text_content"
+                style="@style/BasicTextStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+                android:textColor="@color/md_white_1000"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/text_author"
+                app:layout_constraintTop_toBottomOf="@+id/text_author"
+                tools:text="@tools:sample/lorem" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <TextView
-                    android:id="@+id/tv_review_content"
-                    style="@style/BasicTextStyle"
-                    android:layout_marginTop="@dimen/margin_activity"
-                    android:textColor="@android:color/white"
-                    tools:text="review content" />
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-    </RelativeLayout>
-</layout>
+    </androidx.cardview.widget.CardView>
+</RelativeLayout>
