--- a/app/src/main/res/layout/trailer_list_item.xml
+++ b/app/src/main/res/layout/trailer_list_item.xml
@@ -1,67 +1,49 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~  Copyright 2018 Soojeong Shin
-  ~
-  ~  Licensed under the Apache License, Version 2.0 (the "License");
-  ~  you may not use this file except in compliance with the License.
-  ~  You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~  Unless required by applicable law or agreed to in writing, software
-  ~  distributed under the License is distributed on an "AS IS" BASIS,
-  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~  See the License for the specific language governing permissions and
-  ~  limitations under the License.
-  -->
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/CardViewStyle"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:contentPadding="@dimen/padding_activity">
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <androidx.cardview.widget.CardView
-        style="@style/CardViewStyle"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:contentPadding="@dimen/padding_activity">
+        android:orientation="vertical">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <!-- YouTube trailer thumbnail -->
-                <ImageView
-                    android:id="@+id/iv_trailer_thumbnail"
-                    android:layout_width="@dimen/width_trailer_image"
-                    android:layout_height="@dimen/height_trailer_image"
-                    android:layout_gravity="center"
-                    android:contentDescription="@string/trailer_thumbnail_content_description" />
-
-                <!-- Play button image -->
-                <ImageView
-                    android:id="@+id/iv_trailer_play_circle"
-                    android:layout_width="@dimen/size_play_image"
-                    android:layout_height="@dimen/size_play_image"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:background="@drawable/play_circle"
-                    android:contentDescription="@string/play_content_description" />
-
-            </FrameLayout>
-
-            <!-- Trailer name -->
-            <TextView
-                android:id="@+id/tv_trailer_name"
-                style="@style/BasicTextStyle"
+            <!-- YouTube trailer thumbnail -->
+            <ImageView
+                android:id="@+id/iv_trailer_thumbnail"
+                android:layout_width="@dimen/width_trailer_image"
+                android:layout_height="@dimen/height_trailer_image"
                 android:layout_gravity="center"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:paddingTop="@dimen/padding_activity_small"
-                android:textColor="@android:color/white" />
+                android:contentDescription="@string/trailer_thumbnail_content_description" />
 
-        </LinearLayout>
+            <!-- Play button image -->
+            <ImageView
+                android:id="@+id/iv_trailer_play_circle"
+                android:layout_width="@dimen/size_play_image"
+                android:layout_height="@dimen/size_play_image"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:background="@drawable/play_circle"
+                android:contentDescription="@string/play_content_description" />
 
-    </androidx.cardview.widget.CardView>
-</layout>
+        </FrameLayout>
+
+        <!-- Trailer name -->
+        <TextView
+            android:id="@+id/tv_trailer_name"
+            style="@style/BasicTextStyle"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:paddingTop="@dimen/padding_activity_small"
+            android:textColor="@android:color/white"/>
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
